tests/snapshots/examples_fixtures/type_system__failing__03_runtime_return_violation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/03_runtime_return_violation.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/type_system/failing/03_runtime_return_violation.flx:2:5
  |
2 |     "not-an-int"
  |     ^^^^^^^^^^^^
  |     ------------ expected Int, found String
  |     ------------ return expression type is known at compile time

Help:
  return expression type does not match the declared return type
== stdout ==
<not executed>
